tests/test_files/valid/scheduling/simple_move.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Struct NewLocation : Location
    weight: number
End

Location warehouse1
    id: "0x4711"
    type: "pallet"
End

Location production1
    id: "0x4712"
    type: "pallet"
End

TransportOrderStep tosWarehouse1
    Location warehouse1
End

TransportOrderStep tosProduction1
    Location production1
End

MoveOrderStep mos
    Location warehouse1
End

Task mainTask
    Transport
    From tosWarehouse1
    To tosProduction1

    Move
    To mos
End
