tests/test_files/invalid/syntax/module_misspelled.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Moule intralogistic
    Struct Location
        type : string
    End
End
